ecmascript/parser/tests/typescript-errors/tsc/parser/ecmascript5/ErrorRecovery/Expressions/parserErrorRecovery_Expression1/input.ts.stderr
error: Parenthesized expression cannot be empty
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/ErrorRecovery/Expressions/parserErrorRecovery_Expression1/input.ts:1:9
  |
1 | var v = ()({});
  |         ^^

